--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -51,7 +51,7 @@
     <string name="uninstall_magisk_msg">Αυτό θα αφαιρέσει όλες τις ενότητες, το MagiskSU και πιθανόν να κρυπτογραφήσει τα δεδομένα σας αν δεν είναι κρυπτογραφυμένα\nΕίστε σίγουρος/η ότι θέλετε να συνεχίσετε;</string>
     <string name="version_none">(Καμία)</string>
     <string name="reinstall">Επανεγκατάσταση</string>
-    <string name="update">Ενημέρωση</string>
+    <string name="update">Ενημέρωση %1$s</string>>
 
     <!--Module Fragment-->
     <string name="no_info_provided">(Δεν δόθηκαν πληροφορίες)</string>
@@ -133,7 +133,7 @@
     <string name="flashing">Γίνεται Flash</string>
     <string name="hide_manager_toast">Κρύβοντας το Magisk Manager…</string>
     <string name="hide_manager_fail_toast">Το κρύψιμο Magisk Manager απέτυχε…</string>
-    <string name="download_zip_only">Μόνο Λήψη Zip</string>
+    <string name="download_zip_only">Λήψη Zip Μόνο</string>
     <string name="patch_boot_file">Εφαρμογή Patch στο Αρχείο Εικόνας Boot</string>
     <string name="direct_install">Απευθείας Εγκατάσταση (Προτείνεται)</string>
     <string name="select_method">Επιλογή Μεθόδου</string>
@@ -150,9 +150,12 @@
     <string name="settings_hide_manager_summary">Προσωρινό κρύψιμο του Magisk Manager.\nΑυτό θα εγκαταστήσει μια νέα εφαρμογή με το όνομα \"Unhide Magisk Manager\"</string>
     <string name="language">Γλώσσα</string>
     <string name="system_default">(Προεπιλογή Συστήματος)</string>
+    <string name="settings_update">Ρυθμίσεις Ενημερώσεων</string>
     <string name="settings_update_channel_title">Κανάλι Ενημερώσεων</string>
     <string name="settings_update_stable">Σταθερή</string>
     <string name="settings_update_beta">Beta</string>
+    <string name="settings_boot_format_title">Μορφή Τροποποιημένης Εικόνας Boot</string>
+    <string name="settings_boot_format_summary">Επιλέξτε τη μορφή της εξαγόμενης εικόνας boot μετά το patch.\nΕπιλέξτε .img για flash μέσω λειτουργίας fastboot/download· επιλέξτε .img.tar για flash μέσω ODIN.</string>
 
     <string name="settings_core_only_title">Magisk Λειτουργία Πυρήνα Μόνο</string>
     <string name="settings_core_only_summary">Ενεργοποίηση μόνο των λειτουργιών πυρήνα, καμία από τις ενότητες δεν θα ενεργοποιηθεί. Τα MagiskSU, MagiskHide, και systemless hosts θα παραμείνουν ενεργά</string>
