Update german translation

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -71,7 +71,7 @@
     <string name="app_developers">Hauptentwickler</string>
     <string name="app_developers_"><![CDATA[App entwickelt von <a href="https://github.com/topjohnwu">topjohnwu</a> unter Mitwirkung von <a href="https://github.com/d8ahazard">Digitalhigh</a> und <a href="https://github.com/dvdandroid">Dvdandroid</a>.]]></string>
     <string name="app_changelog">Änderungen</string>
-    <string name="translators">skalnet, c727</string>
+    <string name="translators">skalnet, c727, jenslody</string>
     <string name="app_version">Version</string>
     <string name="app_source_code">Quelltext</string>
     <string name="donation">Spende</string>
@@ -91,7 +91,6 @@
     <string name="install_error">Fehler bei der Installation!</string>
     <string name="invalid_zip">Die Zip-Datei ist kein Magisk-Modul!</string>
     <string name="reboot">Neustart</string>
-    <string name="zip_process_msg">Verarbeite Zip-Datei…</string>
     <string name="downloading_toast">Herunterladen von %1$s</string>
     <string name="magisk_update_title">Neues Magisk-Update verfügbar!</string>
     <string name="settings_reboot_toast">Neustarten, um die Änderungen anzuwenden</string>
@@ -100,10 +99,22 @@
     <string name="safetyNet_hide_notice">Diese App benutzt SafetyNet, welches standardmäßig von Magisk Hide gehandhabt</string>
     <string name="process_error">Prozessfehler</string>
     <string name="internal_storage">Die zip-Datei ist gespeichert unter:\n[Interner Speicher]%1$s</string>
+    <string name="zip_download_title">Herunterladen</string>
+    <string name="zip_download_msg">Lade Zip-Datei herunter …</string>
     <string name="zip_process_title">Verarbeite</string>
+    <string name="zip_process_msg">Verarbeite Zip-Datei…</string>
     <string name="manual_boot_image">Bitte Boot-Image auswählen!</string>
     <string name="manager_update_title">Update für Magisk Manager verfügbar!</string>
     <string name="manager_download_install">Herunterladen und installieren</string>
+    <string name="magisk_updates">Magisk Updates</string>
+    <string name="flashing">Flashing</string>
+    <string name="hide_manager_toast">Magisk Manager verstecken…</string>
+    <string name="hide_manager_fail_toast">Magisk Manager verstecken fehlgeschlagen…</string>
+    <string name="download_zip_only">Zip-Datei nur herunterladen</string>
+    <string name="patch_boot_file">Bootimage-Datei patchen</string>
+    <string name="direct_install">Direkt installieren (empfohlen)</string>
+    <string name="select_method">Methode auswählen</string>
+    <string name="no_boot_file_patch_support">Magisk Zielversion unterstützt das Patchen des Bootimages nicht</string>
 	
     <!--Settings Activity -->
     <string name="settings_general_category">Allgemein</string>
@@ -113,6 +124,16 @@
     <string name="settings_notification_summary">Benachrichtigung, wenn eine neue Version verfügbar ist</string>
     <string name="settings_clear_cache_title">Repo-Cache löschen</string>
     <string name="settings_clear_cache_summary">Löscht die zwischengespeicherten Informationen der Online-Repos. Erzwingt eine Aktualisierung</string>
+    <string name="settings_hide_manager_title">Verstecke Magisk Manager</string>
+    <string name="settings_hide_manager_summary">Magisk Manager zeitweise verstecken.\nDies installiert eine neue App namens \"Unhide Magisk Manager\"</string>
+    <string name="language">Sprache</string>
+    <string name="system_default">(System Standard)</string>
+    <string name="settings_update">Update Einstellungen</string>
+    <string name="settings_update_channel_title">Update Kanal</string>
+    <string name="settings_update_stable">Stabil</string>
+    <string name="settings_update_beta">Beta</string>
+    <string name="settings_boot_format_title">Ausgabeformat des gepatchten Bootimages</string>
+    <string name="settings_boot_format_summary">Wähle das Ausgabeformat des gepatchten Bootimages.\nWähle .img um mit \"fastboot/download mode\" zu schreiben; wähle .img.tar zum Schreiben mit ODIN.</string>
 
     <string name="settings_core_only_title">Nur Kernfunktionen</string>
     <string name="settings_core_only_summary">Aktiviert lediglich die Kernfunktionen, Module werden nicht geladen. MagiskSU, Magisk Hide und Systemless hosts bleiben weiterhin aktiv</string>
