--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -28,7 +28,7 @@
     <!--Install Fragment-->
     <string name="auto_detect">(Авто) %1$s</string>
     <string name="cannot_auto_detect">(Автоопределение невозможно)</string>
-    <string name="boot_image_title">Распоожение boot-образа</string>
+    <string name="boot_image_title">Расположение boot-образа</string>
     <string name="detect_button">Определить</string>
     <string name="advanced_settings_title">Расширенные настройки</string>
     <string name="keep_force_encryption">Оставить принуд. шифрование</string>
